--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -1155,8 +1155,10 @@
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,block_ui_init">
-                                            <button type="button" id="block_page" class="btn btn-primary"><i class="fa fa-remove"></i><span>Block page</span></button>
-                                            <button type="button" id="block_section" class="btn btn-primary"><i class="fa fa-remove"></i><span>Block this section</span></button>
+                                            <section id="block_ui_demo">
+                                                <button type="button" id="block_page" class="btn btn-primary"><i class="fa fa-remove"></i><span>Block page</span></button>
+                                                <button type="button" id="block_section" class="btn btn-primary"><i class="fa fa-remove"></i><span>Block this section</span></button>
+                                            </section>
                                         </div>
                                     </div>
                                 </div>
@@ -1345,7 +1347,7 @@
                 });
 
                 $('#block_section').on('click', function() {
-                    var section = $(this).parents('.show-panel');
+                    var section = $('#block_ui_demo');
                     section.blockControl();
                     setTimeout(function(){section.unblockControl()}, 3000);
                 });
