--- a/demo/add_form_example.html
+++ b/demo/add_form_example.html
@@ -881,7 +881,7 @@
             if (noErrors) {
                 $this[0].reset();
                 $('#product_example_productCountry').trigger('chosen:updated.chosen');
-                addNotification('1 product has been added.', 'success-full-color');
+                addNotification('<i class="fa fa-check-circle"></i><span>1 product has been added.</span>', 'success-full-color');
             } else {
                 errorAlertModal('Please check the fields with errors.', 'Add product errors');
             }
