--- a/demo/plugin_introjs.html
+++ b/demo/plugin_introjs.html
@@ -31,7 +31,7 @@
     })(window,document,'script','dataLayer','GTM-KBSTRWM');</script>
 <!-- End Google Tag Manager --></head>
 <!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><body> <![endif]-->
+<![if !IE]><body><![endif]>
 <!--[if lt IE 9]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]-->
 <!-- HEADER:Start -->
 <!-- Google Tag Manager (noscript) -->
