--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -36,7 +36,7 @@
 <!-- End Google Tag Manager -->
 </head>
 <!--[if lt IE 9]><body class="lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><body> <![endif]-->
+<![if !IE]><body><![endif]>
 <!--[if lt IE 9]><p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p><![endif]--><!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBSTRWM" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
