--- a/demo/image_gallery.html
+++ b/demo/image_gallery.html
@@ -201,10 +201,22 @@
                                 <span class="menu-text">Navigation themes</span>
                             </a>
                         </li>
-                        <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/branding.html#typography">
+                        <li class="menu-item menu-item-has-children">
+                            <a href="javascript:void(0)">
                                 <span class="menu-text">Typography</span>
                             </a>
+                            <ul class="sidebar-submenu">
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#typefaces">
+                                        <span class="menu-text">Typefaces</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#styles">
+                                        <span class="menu-text">Styles</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/branding.html#icons">
@@ -224,11 +236,6 @@
                         <span class="menu-text">CSS Components</span>
                     </a>
                     <ul class="sidebar-submenu">
-                        <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html">
-                                <span class="menu-text">Typefaces variations</span>
-                            </a>
-                        </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/css_components.html#css-tables">
                                 <span class="menu-text">Tables</span>
@@ -586,7 +593,8 @@
             </button>
         </div>
     </div>
-</div>                <!-- SIDEBAR:End -->
+</div>
+                <!-- SIDEBAR:End -->
                 <!-- CONTENT:Start -->
                 <div class="main-content">
                     <div class="page-content">
