--- a/demo/layout.html
+++ b/demo/layout.html
@@ -205,10 +205,22 @@
                                 <span class="menu-text">Navigation themes</span>
                             </a>
                         </li>
-                        <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/branding.html#typography">
+                        <li class="menu-item menu-item-has-children">
+                            <a href="javascript:void(0)">
                                 <span class="menu-text">Typography</span>
                             </a>
+                            <ul class="sidebar-submenu">
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#typefaces">
+                                        <span class="menu-text">Typefaces</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#styles">
+                                        <span class="menu-text">Styles</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/branding.html#icons">
@@ -228,11 +240,6 @@
                         <span class="menu-text">CSS Components</span>
                     </a>
                     <ul class="sidebar-submenu">
-                        <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html">
-                                <span class="menu-text">Typefaces variations</span>
-                            </a>
-                        </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/css_components.html#css-tables">
                                 <span class="menu-text">Tables</span>
@@ -590,7 +597,8 @@
             </button>
         </div>
     </div>
-</div>                <!-- SIDEBAR:End -->
+</div>
+                <!-- SIDEBAR:End -->
                 <!-- CONTENT:Start -->
                 <div class="main-content">
                     <div class="page-content">
@@ -694,6 +702,11 @@
                                 <div class="show-panel-body code-example">
                                     <h2><strong>Top Navigation</strong></h2>
                                     <p><strong>The top navigation is based on the Bootstrap 3.3.5. component <a href="http://getbootstrap.com/components/#navbar" target="_blank">Navbar</a></strong></p>
+                                    <ul>
+                                        <li>The top navigation should be displayed in all applications and will contain the items displayed in the preview file, as needed.</li>
+                                        <li>Avoid adding other items than the ones from the preview file.</li>
+                                        <li>Always use the same style for all applications you develop.</li>
+                                    </ul>
                                     <div class="code-container">
                                         <div class="row flex-container code-header no-border-top">
                                             <div class="col-sm-8 module-description">
@@ -1013,6 +1026,11 @@
                                 <div class="show-panel-body">
                                     <h2><strong>Sidebar</strong></h2>
                                     <p><strong>eMAG Apps UI KIT's unique sidebar menu.</strong></p>
+                                    <ul>
+                                        <li>The sidebar navigation will always be placed on-top, on the left side of the screen;</li>
+                                        <li>If the navigation will have more sections, the user can scroll through them;</li>
+                                        <li>Always use the same navigation style for all applications you develop.</li>
+                                    </ul>
                                     <p>You can check the different sidebar states below.</p>
                                     <div class="row">
                                         <div class="col-md-3">
@@ -1275,7 +1293,7 @@
 
                 showPageCode();
 
-               
+
             });
         </script>
         <!-- DOCUMENT-READY:End -->
