--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -10,7 +10,7 @@
 <meta name="author" content="eMAG HX Team">
 
 <link rel="apple-touch-icon" href="../apple-touch-icon.png">
-<link rel="icon" type="image/png" href="../favicon.png">        
+<link rel="icon" type="image/png" href="../favicon.png">
         <link rel="stylesheet" href="../dist/plugins/jqgrid/ui.jqgrid.min.css" data-dependency-name="jqgrid_css">
         <link rel="stylesheet" href="../dist/plugins/drop/drop.min.css" data-dependency-name="drop_css">
 
@@ -205,10 +205,22 @@
                                 <span class="menu-text">Navigation themes</span>
                             </a>
                         </li>
-                        <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/branding.html#typography">
+                        <li class="menu-item menu-item-has-children">
+                            <a href="javascript:void(0)">
                                 <span class="menu-text">Typography</span>
                             </a>
+                            <ul class="sidebar-submenu">
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#typefaces">
+                                        <span class="menu-text">Typefaces</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/typography.html#styles">
+                                        <span class="menu-text">Styles</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/branding.html#icons">
@@ -228,11 +240,6 @@
                         <span class="menu-text">CSS Components</span>
                     </a>
                     <ul class="sidebar-submenu">
-                        <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/css_components.html">
-                                <span class="menu-text">Typefaces variations</span>
-                            </a>
-                        </li>
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/css_components.html#css-tables">
                                 <span class="menu-text">Tables</span>
@@ -590,7 +597,8 @@
             </button>
         </div>
     </div>
-</div>        <!-- SIDEBAR:End -->
+</div>
+        <!-- SIDEBAR:End -->
         <!-- CONTENT:Start -->
         <div class="main-content">
             <div class="page-content">
@@ -649,6 +657,18 @@
 
                                 <div class="row">
                                     <div class="col-sm-12">
+                                        <div class="pad-15">
+                                            <ul>
+                                                <li>A list can be used to display information that can be grouped on rows and columns so the user can easily read it;</li>
+                                                <li>A list is part of a panel that can be vertically expanded or collapsed, from the top-right corner;</li>
+                                                <li>The columns' width can be resized by pulling the line that separates them. The columns' width should not be smaller than the text's width from the column's header;</li>
+                                                <li>On top of a list, the buttons with actions that are changing the list's content will be the following: the left side should contain the action buttons that are changing the content that is already in the list (e.g. Export, Delete), the right side should contain the action buttons that are not changing the content that is already in the list (e.g. Add Product, Import Product);</li>
+                                                <li>The content from a column can be sorted ascending or descending, using the sorting arrows, according to what kind of content is in there (e.g. a column showing numerical values, a column showing the item's status);</li>
+                                                <li>The buttons from the "Actions" column should be displayed as groups of maximum 3. If there will be more than 3, a menu button should be displayed. This one will open a drop-down menu displaying the rest of the actions;</li>
+                                                <li>If there's no self-explanatory icon for the action button you need to display, you can use a button with a short descriptive label instead or you can group the actions in a drop-down menu;</li>
+                                                <li>To avoid the horizontal scroll, it's recommended to use the "Select Columns" functionality. This can help you to find and display only the columns you need in your list.</li>
+                                            </ul>
+                                        </div>
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,jqgrid_css,jqgrid_source,jqgrid_locale_en_source,listing_dummy_data,jqgrid_basic_init,jquery_ui_source,stickykit_source,tether_source,drop_source,drop_css">
                                             <table id="grid_table" class="table table-bordered"></table>
                                             <div id="grid_pager"></div>
